add coverage script to package.json

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "scripts": {
     "pretest": "eslint .",
     "test": "jest",
+    "test:c": "jest --coverage",
     "docs": "jsdoc --configure .jsdoc.json --verbose"
   },
   "repository": "https://github.com/afrontend/fp-panel.git",
