--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "boxy-jsdoc-template": "^2.0.2",
     "coveralls": "^3.0.2",
+    "doxdox": "^3.0.0",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-xo": "^0.25.0",
@@ -61,7 +62,8 @@
     "pretest": "eslint .",
     "test": "jest",
     "test:c": "jest --coverage",
-    "docs": "jsdoc --configure .jsdoc.json --verbose"
+    "docs": "jsdoc --configure .jsdoc.json --verbose",
+    "markdown": "doxdox 'lib/**/*.js' --layout markdown --output DOCUMENTATION.md"
   },
   "repository": "https://github.com/afrontend/fp-panel.git",
   "jest": {
