--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "braces": "^3.0.2",
+    "handlebars": "^4.1.2",
+    "lodash": "^4.17.14",
+    "lodash.merge": "^4.6.2",
+    "mem": "^5.1.1",
     "tui-jsdoc-template": "^1.2.2"
   }
 }
