--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "boxy-jsdoc-template": "^2.0.2",
     "coveralls": "^3.0.2",
-    "doxdox": "^3.0.0",
+    "doxdox": "^4.0.0-preview.13",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-xo": "^0.25.0",
@@ -26,7 +26,7 @@
     "husky": "^1.2.0",
     "jest": "^26.1.0",
     "jsdoc": "^3.6.3",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^1.15.2"
   },
   "engines": {
