--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "handlebars": "^4.7.6",
     "lodash": "^4.17.19",
     "lodash.merge": "^4.6.2",
-    "mem": "^5.1.1",
-    "tui-jsdoc-template": "^1.2.2"
+    "mem": "^5.1.1"
   }
 }
