--- a/package.json
+++ b/package.json
@@ -16,54 +16,12 @@
     "panel"
   ],
   "devDependencies": {
-    "boxy-jsdoc-template": "^2.0.2",
-    "coveralls": "^3.0.2",
-    "doxdox": "^4.0.0-preview.13",
-    "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-config-xo": "^0.25.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.2.0",
-    "jest": "^26.1.0",
-    "jsdoc": "^3.6.3",
-    "lint-staged": "^13.0.3",
-    "prettier": "^1.15.2"
-  },
-  "engines": {
-    "npm": ">= 4.0.0"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.json": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "xo",
-      "prettier"
-    ],
-    "env": {
-      "jest": true,
-      "node": true
-    },
-    "rules": {
-      "prettier/prettier": "error"
-    },
-    "plugins": [
-      "prettier"
-    ]
+    "coveralls": "^3.1.1",
+    "jest": "^29.5.0"
   },
   "scripts": {
-    "pretest": "eslint .",
     "test": "jest",
-    "coverage": "jest --coverage",
-    "docs": "jsdoc --configure .jsdoc.json --verbose",
-    "markdown": "doxdox 'lib/**/*.js' --layout markdown --output DOCUMENTATION.md"
+    "coverage": "jest --coverage"
   },
   "repository": "https://github.com/afrontend/fp-panel.git",
   "jest": {
@@ -71,10 +29,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "braces": "^3.0.2",
-    "handlebars": "^4.7.6",
-    "lodash": "^4.17.19",
-    "lodash.merge": "^4.6.2",
-    "mem": "^5.1.1"
+    "lodash": "^4.17.21"
   }
 }
